SERVER-57454: NotMaster error from chunk recipient is not propagated back to config server